# analise_descricao

./: .gitignore  pyproject.toml  setup.py
analise_descricao/: Leia-me.docx  analise_produtos.py  fff.py  interface-tq.py
analise_descricao/Modelo/: Base_Analise.xlsx
