[tool.poetry]
name = "analise-descricao"
version = "0.1.0"
description = ""
authors = ["Raphael Luckmann <raphaelluckmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
PyQt5 = "==5.15.11"
PyQt5-Qt5 = "==5.15.2"
PyQt5_sip = "==12.15.0"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
cx-freeze = "^7.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
